<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white_opaque"
    android:orientation="vertical" >
    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent" >
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:orientation="vertical"
            android:paddingBottom="10dp" >
            <RelativeLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="20dp"
                android:padding="5dp" >
                <!--<it.adinfo.vivoa.views.RoundedImageView
                    android:id="@+id/profile_picture"
                    android:layout_width="80dp"
                    android:layout_height="80dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test_avatar"
                    app:oval="true" />-->
            </RelativeLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_login"
                android:orientation="vertical" >
                <EditText
                    android:id="@+id/name"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:hint="@string/nome"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" >
                </RelativeLayout>
                <EditText
                    android:id="@+id/surname"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:hint="@string/cognome"
                    android:inputType="textCapWords"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" >
                </RelativeLayout>
            </LinearLayout>
            <TextView
                android:id="@+id/label_sesso"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/sesso"
                android:textColor="@color/red"
                android:textSize="17sp" />
            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal" >
                <RadioButton
                    android:id="@+id/radio_male"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:button="@null"
                    android:checked="true"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/radio_button"
                    android:text="@string/maschio"
                    android:textColor="@color/gray_label" />
                <RadioButton
                    android:id="@+id/radio_female"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:button="@null"
                    android:drawablePadding="5dp"
                    android:drawableRight="@drawable/radio_button"
                    android:text="@string/femmina"
                    android:textColor="@color/gray_label" />
            </RadioGroup>
            <TextView
                android:id="@+id/label_data_nascita"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:text="@string/data_di_nascita"
                android:textColor="@color/red"
                android:textSize="17sp" />
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp"
                android:orientation="horizontal" >
                <EditText
                    android:id="@+id/data_nascita_giorno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:background="@drawable/back_login"
                    android:gravity="center"
                    android:hint="@string/gg"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@+id/data_nascita_mese"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/data_nascita_mese"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="1"
                    android:background="@drawable/back_login"
                    android:gravity="center"
                    android:hint="@string/mm"
                    android:inputType="number"
                    android:maxLength="2"
                    android:nextFocusDown="@+id/data_nascita_anno"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
                <EditText
                    android:id="@+id/data_nascita_anno"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="10dp"
                    android:layout_weight="2"
                    android:background="@drawable/back_login"
                    android:gravity="center"
                    android:hint="@string/aaaa"
                    android:inputType="number"
                    android:maxLength="4"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>
            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:background="@drawable/back_login"
                android:orientation="vertical" >
                <EditText
                    android:id="@+id/password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:hint="@string/password_signup"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="1dp"
                    android:background="@color/gray" >
                </RelativeLayout>
                <EditText
                    android:id="@+id/confirm_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_margin="5dp"
                    android:background="@color/white"
                    android:hint="@string/conferma_password"
                    android:inputType="textPassword"
                    android:padding="15dp"
                    android:singleLine="true"
                    android:textSize="15sp" />
            </LinearLayout>
            <Button
                android:id="@+id/button_registrati"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginTop="10dp"
                android:background="@drawable/login_btn_accedi"
                android:text="@string/salva"
                android:textColor="@color/white"
                android:textSize="18sp" />
        </LinearLayout>
    </ScrollView>
</LinearLayout>